AM_CXXFLAGS = -Wall -Wno-multichar -Wno-unknown-pragmas -W -Wshadow  \
	-Wpointer-arith -Wwrite-strings -Wconversion -g -O0 \
	-IK -IDCL

lib_LTLIBRARIES = libcdcl.la

libcdcl_la_SOURCES = DCL/Communication_Layers/TDCLBufferedPipe.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/TDCLCommLayer.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/TDCLMNPPipe.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/TDCLHammerPipe.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/TDCLPipe.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/TDCLPipeProxy.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/TDCLSyncCommLayer.cpp
libcdcl_la_SOURCES += DCL/Data/Text/TDCLStyleRef.cpp
libcdcl_la_SOURCES += DCL/Data/Text/TDCLFontSpecification.cpp
libcdcl_la_SOURCES += DCL/Data/Text/TDCLClParagraph.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Errors/TDCLBadParamError.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Errors/TDCLBadStateError.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Errors/TDCLLimitReachedError.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Errors/TDCLMemError.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Errors/TDCLNotImplementedError.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Errors/TDCLUnknownError.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLDoesntExistException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLEOFException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLExistsAlreadyException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLFullException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLIOException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLPermissionException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLPositionException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLReadOnlyException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/IO_Exceptions/TDCLTimeoutException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Link_Exceptions/TDCLBadAppCmdException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Link_Exceptions/TDCLBadDockCmdException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Link_Exceptions/TDCLLinkException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Link_Exceptions/TDCLUnexpDockCmdException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLClassCastException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLNewtonException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLNotAvailableException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLNSException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLPackageException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/TDCLUserCancelledException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Thread_Exceptions/TDCLSemaphoreBusyException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Thread_Exceptions/TDCLThreadActiveException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Thread_Exceptions/TDCLThreadDeadLockException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Thread_Exceptions/TDCLThreadException.cpp
libcdcl_la_SOURCES += DCL/Exceptions/Thread_Exceptions/TDCLThreadStoppedException.cpp
libcdcl_la_SOURCES += DCL/Interfaces/Common/TDCLLogApplication.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLApplication.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLEvent.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLFile.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLFolder.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLFSItem.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLFSItemRef.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLRootFolder.cpp
libcdcl_la_SOURCES += DCL/Interfaces/TDCLThread.cpp
libcdcl_la_SOURCES += DCL/Interfaces/UDCLTime.cpp
libcdcl_la_SOURCES += DCL/Link/App_Commands/TDCLAppCmdFile.cpp
libcdcl_la_SOURCES += DCL/Link/App_Commands/TDCLAppCmdKbdChar.cpp
libcdcl_la_SOURCES += DCL/Link/App_Commands/TDCLAppCmdString.cpp
libcdcl_la_SOURCES += DCL/Link/App_Commands/TDCLAppCommand.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdArray.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdCString.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdDesktopInfo.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdGeneric.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdLoadPkg.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdNewtonInfo.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdNewtonName.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdNoData.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdNSObject.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdPackageList.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdPassword.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdSingleLong.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCmdTwoNSObjects.cpp
libcdcl_la_SOURCES += DCL/Link/Dock_Commands/TDCLDockCommand.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCommand.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdDeletePkg.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdEnterBreak.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdException.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdExceptionRef.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdExitBreak.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdFuncObj.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdLoadPkg.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdResult.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdStackFrame.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdText.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdCode.cpp
libcdcl_la_SOURCES += DCL/Link/Inspector_Commands/TDCLInspectorCmdCodeBlock.cpp
libcdcl_la_SOURCES += DCL/Link/Link_Engines/TDCLBrowseEngine.cpp
libcdcl_la_SOURCES += DCL/Link/Link_Engines/TDCLFileImportEngine.cpp
libcdcl_la_SOURCES += DCL/Link/Link_Engines/TDCLKeyboardEngine.cpp
libcdcl_la_SOURCES += DCL/Link/Link_Engines/TDCLLinkEngine.cpp
libcdcl_la_SOURCES += DCL/Link/Link_Engines/TDCLLoadPkgEngine.cpp
libcdcl_la_SOURCES += DCL/Link/Link_Engines/TDCLSyncEngine.cpp
libcdcl_la_SOURCES += DCL/Link/TDCLDockLink.cpp
libcdcl_la_SOURCES += DCL/Link/TDCLFullDockLink.cpp
libcdcl_la_SOURCES += DCL/Link/TDCLLink.cpp
libcdcl_la_SOURCES += DCL/Link/TDCLLoadPackageLink.cpp
libcdcl_la_SOURCES += DCL/Link/TDCLInspectorLink.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLNSCodec.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLNSDecoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLNSEncoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLNSOFDecoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLNSOFEncoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLPkgDecoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLPkgEncoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLTextDecoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLTextEncoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLXMLDecoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Exchange/TDCLXMLEncoder.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/KDCLSYM.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSArray.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSBinary.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSFrame.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSFunction.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSObject.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSRef.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSString.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSSymbol.cpp
libcdcl_la_SOURCES += DCL/NS_Objects/Objects/TDCLNSWeakRef.cpp
libcdcl_la_SOURCES += DCL/Package/TDCLPackage.cpp
libcdcl_la_SOURCES += DCL/Package/TDCLPkgNOSPart.cpp
libcdcl_la_SOURCES += DCL/Package/TDCLPkgPart.cpp
libcdcl_la_SOURCES += DCL/Package/UDCLPaperback.cpp
libcdcl_la_SOURCES += DCL/Server/TDCLOneLinkServer.cpp
libcdcl_la_SOURCES += DCL/Server/TDCLServer.cpp
libcdcl_la_SOURCES += DCL/Server/TDCLSimpleServer.cpp
libcdcl_la_SOURCES += DCL/Streams/TDCLMemStream.cpp
libcdcl_la_SOURCES += DCL/Streams/TDCLStdStream.cpp
libcdcl_la_SOURCES += DCL/Streams/TDCLStream.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/Common/TDCLSocket.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/POSIX/TDCLBSDSocket.cpp
libcdcl_la_SOURCES += DCL/Communication_Layers/POSIX/TDCLFDSerialPort.cpp
libcdcl_la_SOURCES += DCL/Interfaces/POSIX/TDCLPOSIXDir.cpp
libcdcl_la_SOURCES += DCL/Interfaces/POSIX/TDCLPOSIXDirBase.cpp
libcdcl_la_SOURCES += DCL/Interfaces/POSIX/TDCLPOSIXFile.cpp
libcdcl_la_SOURCES += DCL/Interfaces/POSIX/TDCLPOSIXFiles.cpp
libcdcl_la_SOURCES += DCL/Interfaces/POSIX/TDCLPOSIXRootDir.cpp
libcdcl_la_SOURCES += DCL/Interfaces/POSIX/TDCLPThreads.cpp

libcdcl_la_SOURCES += K/Crypto/UDES.cpp
libcdcl_la_SOURCES += K/Crypto/UDESTables.cpp
libcdcl_la_SOURCES += K/Math/TInt64.cpp
libcdcl_la_SOURCES += K/Math/TSInt64.cpp
libcdcl_la_SOURCES += K/Math/TUInt64.cpp
libcdcl_la_SOURCES += K/Math/UTInt64.cpp
libcdcl_la_SOURCES += K/Misc/UBase64.cpp
libcdcl_la_SOURCES += K/Misc/TRefCounter.cpp
libcdcl_la_SOURCES += K/Unicode/TString.cpp
libcdcl_la_SOURCES += K/Unicode/TStringRef.cpp
libcdcl_la_SOURCES += K/Unicode/UUTF16Conv.cpp
libcdcl_la_SOURCES += K/Unicode/UUTF16CStr.cpp


libcdcl_HDRS = DCL/Communication_Layers/Common/TDCLSocket.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLCommToolBox.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLCTBADSP.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLCTBIrDA.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLCTBMNPSerial.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLOpenTransport.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLOTADSP.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLOTSerial.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS/TDCLOTTCP.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS_X/at_proto.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS_X/TDCLIOKitSerialPort.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS_X/TDCLRendezVous.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS_X/TDCLRendezVousOT.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS_X/TDCLXADSP.h
libcdcl_HDRS += DCL/Communication_Layers/MacOS_X/TDCLXADSPSocket.h
libcdcl_HDRS += DCL/Communication_Layers/POSIX/TDCLBSDSocket.h
libcdcl_HDRS += DCL/Communication_Layers/POSIX/TDCLFDSerialPort.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLBufferedPipe.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLCommLayer.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLMNPPipe.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLHammerPipe.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLPipe.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLPipeProxy.h
libcdcl_HDRS += DCL/Communication_Layers/TDCLSyncCommLayer.h
libcdcl_HDRS += DCL/Data/Picture/TDCLPicture.h
libcdcl_HDRS += DCL/Data/Text/TDCLClParagraph.h
libcdcl_HDRS += DCL/Data/Text/TDCLFontSpecification.h
libcdcl_HDRS += DCL/Data/Text/TDCLRichText.h
libcdcl_HDRS += DCL/Data/Text/TDCLStyleRef.h
libcdcl_HDRS += DCL/Exceptions/Errors/TDCLBadParamError.h
libcdcl_HDRS += DCL/Exceptions/Errors/TDCLBadStateError.h
libcdcl_HDRS += DCL/Exceptions/Errors/TDCLLimitReachedError.h
libcdcl_HDRS += DCL/Exceptions/Errors/TDCLMemError.h
libcdcl_HDRS += DCL/Exceptions/Errors/TDCLNotImplementedError.h
libcdcl_HDRS += DCL/Exceptions/Errors/TDCLUnknownError.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLDoesntExistException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLEOFException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLExistsAlreadyException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLFullException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLIOException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLPermissionException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLPositionException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLReadOnlyException.h
libcdcl_HDRS += DCL/Exceptions/IO_Exceptions/TDCLTimeoutException.h
libcdcl_HDRS += DCL/Exceptions/Link_Exceptions/TDCLBadAppCmdException.h
libcdcl_HDRS += DCL/Exceptions/Link_Exceptions/TDCLBadDockCmdException.h
libcdcl_HDRS += DCL/Exceptions/Link_Exceptions/TDCLLinkException.h
libcdcl_HDRS += DCL/Exceptions/Link_Exceptions/TDCLUnexpDockCmdException.h
libcdcl_HDRS += DCL/Exceptions/TDCLClassCastException.h
libcdcl_HDRS += DCL/Exceptions/TDCLException.h
libcdcl_HDRS += DCL/Exceptions/TDCLNewtonException.h
libcdcl_HDRS += DCL/Exceptions/TDCLNotAvailableException.h
libcdcl_HDRS += DCL/Exceptions/TDCLNSException.h
libcdcl_HDRS += DCL/Exceptions/TDCLPackageException.h
libcdcl_HDRS += DCL/Exceptions/TDCLUserCancelledException.h
libcdcl_HDRS += DCL/Exceptions/Thread_Exceptions/TDCLSemaphoreBusyException.h
libcdcl_HDRS += DCL/Exceptions/Thread_Exceptions/TDCLThreadActiveException.h
libcdcl_HDRS += DCL/Exceptions/Thread_Exceptions/TDCLThreadDeadLockException.h
libcdcl_HDRS += DCL/Exceptions/Thread_Exceptions/TDCLThreadException.h
libcdcl_HDRS += DCL/Exceptions/Thread_Exceptions/TDCLThreadStoppedException.h
libcdcl_HDRS += DCL/Headers/DCLDebugMacOSPPCPrefix.h
libcdcl_HDRS += DCL/Headers/DCLDebugOSXPrefix.h
libcdcl_HDRS += DCL/Headers/DCLDefinitions.h
libcdcl_HDRS += DCL/Headers/DCLErrorMessages.h
libcdcl_HDRS += DCL/Headers/DCLFinalMacOSPPCPrefix.h
libcdcl_HDRS += DCL/Headers/DCLFinalOSXPrefix.h
libcdcl_HDRS += DCL/Headers/DCLMacErrorMessages.h
libcdcl_HDRS += DCL/Headers/DCLStrings.h
libcdcl_HDRS += DCL/Headers/PrecompiledHeader.h
libcdcl_HDRS += DCL/Interfaces/Common/TDCLLogApplication.h
libcdcl_HDRS += DCL/Interfaces/IDCLFiles.h
libcdcl_HDRS += DCL/Interfaces/IDCLThreads.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacDesktopFolder.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacFile.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacFiles.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacFolder.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacGetPutFiles.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacOS7DesktopFolder.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacOS7File.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacOS7Folder.h
libcdcl_HDRS += DCL/Interfaces/MacOS/TDCLMacThreads.h
libcdcl_HDRS += DCL/Interfaces/MacOS/UDCLCTBConfig.h
libcdcl_HDRS += DCL/Interfaces/MacOS/UDCLMacMachineName.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/Carbon_Files/TDCLMacCarbonDesktopFolder.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/Carbon_Files/TDCLMacCarbonFile.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/Carbon_Files/TDCLMacCarbonFolder.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/DCLCocoaApplication.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/IDCLObjCApplication.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/TDCLObjCApplication.h
libcdcl_HDRS += DCL/Interfaces/MacOS_X/UDCLMacCarbonUtils.h
libcdcl_HDRS += DCL/Interfaces/POSIX/Compat/libgen.h
libcdcl_HDRS += DCL/Interfaces/POSIX/TDCLPOSIXDir.h
libcdcl_HDRS += DCL/Interfaces/POSIX/TDCLPOSIXDirBase.h
libcdcl_HDRS += DCL/Interfaces/POSIX/TDCLPOSIXFile.h
libcdcl_HDRS += DCL/Interfaces/POSIX/TDCLPOSIXFiles.h
libcdcl_HDRS += DCL/Interfaces/POSIX/TDCLPOSIXRootDir.h
libcdcl_HDRS += DCL/Interfaces/POSIX/TDCLPThreads.h
libcdcl_HDRS += DCL/Interfaces/TDCLApplication.h
libcdcl_HDRS += DCL/Interfaces/TDCLEvent.h
libcdcl_HDRS += DCL/Interfaces/TDCLFile.h
libcdcl_HDRS += DCL/Interfaces/TDCLFolder.h
libcdcl_HDRS += DCL/Interfaces/TDCLFSItem.h
libcdcl_HDRS += DCL/Interfaces/TDCLFSItemRef.h
libcdcl_HDRS += DCL/Interfaces/TDCLRootFolder.h
libcdcl_HDRS += DCL/Interfaces/TDCLThread.h
libcdcl_HDRS += DCL/Interfaces/UDCLTime.h
libcdcl_HDRS += DCL/Link/App_Commands/TDCLAppCmdFile.h
libcdcl_HDRS += DCL/Link/App_Commands/TDCLAppCmdKbdChar.h
libcdcl_HDRS += DCL/Link/App_Commands/TDCLAppCmdString.h
libcdcl_HDRS += DCL/Link/App_Commands/TDCLAppCommand.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdArray.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdBackupIDs.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdCString.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdDesktopInfo.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdGeneric.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdLoadPkg.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdNewtonInfo.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdNewtonName.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdNoData.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdNSObject.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdPackageList.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdPassword.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdSingleLong.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCmdTwoNSObjects.h
libcdcl_HDRS += DCL/Link/Dock_Commands/TDCLDockCommand.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCommand.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdDeletePkg.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdEnterBreak.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdException.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdExceptionRef.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdExitBreak.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdFuncObj.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdLoadPkg.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdResult.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdStackFrame.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdText.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdCode.h
libcdcl_HDRS += DCL/Link/Inspector_Commands/TDCLInspectorCmdCodeBlock.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLBrowseEngine.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLFileImportEngine.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLKeyboardEngine.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLLinkEngine.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLLoadPkgEngine.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLSyncEngine.h
libcdcl_HDRS += DCL/Link/Link_Engines/TDCLSyncSourceEngine.h
libcdcl_HDRS += DCL/Link/TDCLDockLink.h
libcdcl_HDRS += DCL/Link/TDCLFullDockLink.h
libcdcl_HDRS += DCL/Link/TDCLLink.h
libcdcl_HDRS += DCL/Link/TDCLLoadPackageLink.h
libcdcl_HDRS += DCL/Link/TDCLInspectorLink.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/KDCLNSOF.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/KDCLPkg.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLNSCodec.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLNSDecoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLNSEncoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLNSOFDecoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLNSOFEncoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLPkgDecoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLPkgEncoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLTextDecoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLTextEncoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLXMLDecoder.h
libcdcl_HDRS += DCL/NS_Objects/Exchange/TDCLXMLEncoder.h
libcdcl_HDRS += DCL/NS_Objects/KDCLNSErrors.h
libcdcl_HDRS += DCL/NS_Objects/Objects/IStreamable.h
libcdcl_HDRS += DCL/NS_Objects/Objects/KDCLSYM.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSArray.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSBinary.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSFrame.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSFunction.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSObject.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSRef.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSString.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSSymbol.h
libcdcl_HDRS += DCL/NS_Objects/Objects/TDCLNSWeakRef.h
libcdcl_HDRS += DCL/NS_Objects/Views/ObjC/DCLNSRef.h
libcdcl_HDRS += DCL/Package/KDCLPackageErrors.h
libcdcl_HDRS += DCL/Package/TDCLPackage.h
libcdcl_HDRS += DCL/Package/TDCLPkgNOSPart.h
libcdcl_HDRS += DCL/Package/TDCLPkgPart.h
libcdcl_HDRS += DCL/Package/UDCLPaperback.h
libcdcl_HDRS += DCL/Server/TDCLOneLinkServer.h
libcdcl_HDRS += DCL/Server/TDCLServer.h
libcdcl_HDRS += DCL/Server/TDCLSimpleServer.h
libcdcl_HDRS += DCL/Streams/TDCLMemStream.h
libcdcl_HDRS += DCL/Streams/TDCLRandomAccessStream.h
libcdcl_HDRS += DCL/Streams/TDCLStdStream.h
libcdcl_HDRS += DCL/Streams/TDCLStream.h

libcdcl_HDRS += K/Crypto/U3DES.h
libcdcl_HDRS += K/Crypto/UDES.h
libcdcl_HDRS += K/Defines/KDefinitions.h
libcdcl_HDRS += K/Defines/UByteSex.h
libcdcl_HDRS += K/Exceptions/Errors/TError.h
libcdcl_HDRS += K/Exceptions/Errors/TMemError.h
libcdcl_HDRS += K/Exceptions/IO/TEOFException.h
libcdcl_HDRS += K/Exceptions/IO/TIOException.h
libcdcl_HDRS += K/Exceptions/TException.h
libcdcl_HDRS += K/GP/Creation/TGPCAKoza.h
libcdcl_HDRS += K/GP/Creation/TGPCreationAlgorithm.h
libcdcl_HDRS += K/GP/Data/Numbers/TGPNumberData.h
libcdcl_HDRS += K/GP/Data/Numbers/TGPSInt32Data.h
libcdcl_HDRS += K/GP/Data/TGPBooleanData.h
libcdcl_HDRS += K/GP/Data/TGPData.h
libcdcl_HDRS += K/GP/Data/TGPDataRef.h
libcdcl_HDRS += K/GP/Data/TGPStringData.h
libcdcl_HDRS += K/GP/Data/TGPType.h
libcdcl_HDRS += K/GP/Data/TGPVoidData.h
libcdcl_HDRS += K/GP/Fitness/TGPDoubleFitness.h
libcdcl_HDRS += K/GP/Fitness/TGPFitness.h
libcdcl_HDRS += K/GP/Language/TGPLanguage.h
libcdcl_HDRS += K/GP/Selection/TGPSelection.h
libcdcl_HDRS += K/GP/Selection/TGPSortSelection.h
libcdcl_HDRS += K/GP/Selection/TGPTournamentSelection.h
libcdcl_HDRS += K/GP/Selection/TGPTruncationSelection.h
libcdcl_HDRS += K/GP/TGPEvaluationContext.h
libcdcl_HDRS += K/GP/TGPInterpreter.h
libcdcl_HDRS += K/GP/TGPSimpleInterpreter.h
libcdcl_HDRS += K/GP/TGPSoup.h
libcdcl_HDRS += K/GP/Tree/Nodes/BooleanNodes/TGPNodeAnd.h
libcdcl_HDRS += K/GP/Tree/Nodes/BooleanNodes/TGPNodeBoolean.h
libcdcl_HDRS += K/GP/Tree/Nodes/BooleanNodes/TGPNodeNot.h
libcdcl_HDRS += K/GP/Tree/Nodes/BooleanNodes/TGPNodeOr.h
libcdcl_HDRS += K/GP/Tree/Nodes/FlowNodes/TGPNodeDo.h
libcdcl_HDRS += K/GP/Tree/Nodes/FlowNodes/TGPNodeIfThenElse.h
libcdcl_HDRS += K/GP/Tree/Nodes/TGPNode.h
libcdcl_HDRS += K/GP/Tree/Nodes/TGPNodeConst.h
libcdcl_HDRS += K/GP/Tree/Nodes/TGPNodeLeaf.h
libcdcl_HDRS += K/GP/Tree/Nodes/TGPNodeRef.h
libcdcl_HDRS += K/GP/Tree/Nodes/VarNodes/TGPGetStaticVariable.h
libcdcl_HDRS += K/GP/Tree/Nodes/VarNodes/TGPSetStaticVariable.h
libcdcl_HDRS += K/GP/Tree/TGPTree.h
libcdcl_HDRS += K/Math/TInt64.h
libcdcl_HDRS += K/Math/TMT19937RandomGenerator.h
libcdcl_HDRS += K/Math/TRandomGenerator.h
libcdcl_HDRS += K/Math/TSInt64.h
libcdcl_HDRS += K/Math/TUInt64.h
libcdcl_HDRS += K/Math/UTInt64.h
libcdcl_HDRS += K/Misc/RelocHack.h
libcdcl_HDRS += K/Misc/TCircleBuffer.h
libcdcl_HDRS += K/Misc/TDoubleLinkedList.h
libcdcl_HDRS += K/Misc/TMappedFile.h
libcdcl_HDRS += K/Misc/TNameServerSingleton.h
libcdcl_HDRS += K/Misc/TRefCounter.h
libcdcl_HDRS += K/Misc/TSmartPtr.h
libcdcl_HDRS += K/Misc/UBase64.h
libcdcl_HDRS += K/Misc/UPStrings.h
libcdcl_HDRS += K/Streams/TFileStream.h
libcdcl_HDRS += K/Streams/TRandomAccessStream.h
libcdcl_HDRS += K/Streams/TStream.h
libcdcl_HDRS += K/Tests/KDebug.h
libcdcl_HDRS += K/Tests/TFunctionMonitor.h
libcdcl_HDRS += K/Tests/TMonitorMethodClient.h
libcdcl_HDRS += K/Tests/TNewtonTraceMonitor.h
libcdcl_HDRS += K/Tests/TTraceMonitor.h
libcdcl_HDRS += K/Threads/TCondVar.h
libcdcl_HDRS += K/Threads/TMutex.h
libcdcl_HDRS += K/Threads/TThread.h
libcdcl_HDRS += K/Unicode/TMutableStringRef.h
libcdcl_HDRS += K/Unicode/TString.h
libcdcl_HDRS += K/Unicode/TStringRef.h
libcdcl_HDRS += K/Unicode/UnicodeDefinitions.h
libcdcl_HDRS += K/Unicode/UUTF16Conv.h
libcdcl_HDRS += K/Unicode/UUTF16CStr.h
libcdcl_HDRS += K/XML/UExpatUtils.h

includedir = ${prefix}/include/cDCL
nobase_include_HEADERS = $(libcdcl_HDRS)

