nl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)

AC_INIT([libcdcl], [1.0], [eck@40hz.org])

AM_INIT_AUTOMAKE([1.6 foreign])

AC_CONFIG_MACRO_DIR([m4])
AC_PROG_CXX
AC_PROG_LIBTOOL
AM_CONDITIONAL([I586], [test "$target_cpu"==i586])
AM_COND_IF([I586],[AC_SUBST(arch_flags,"-m32")])

AC_CHECK_HEADER(cygwin/stdlib.h,[AC_DEFINE(TARGET_OS_CYGWIN)],,,)
AC_CHECK_HEADER(Newton.h,[AC_DEFINE(TARGET_OS_NEWTON)],,,)
AC_CHECK_HEADER(sys/appleapiopts.h,[AC_DEFINE(TARGET_OS_OPENSTEP)],,,)
AC_CHECK_HEADER(linux/unistd.h,[AC_DEFINE(TARGET_OS_LINUX)],,,)

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
